--- a/index.html
+++ b/index.html
@@ -1,55 +1,71 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="description" content="This is the profile of Emma">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Essayez vos vêtements de luxe virtuellement</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap" rel="stylesheet">
+    <title>Page de profil d'Emma</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <script src="https://kit.fontawesome.com/1ec29f5129.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <header>
-        <div class="logo">
-            <h1>VisionPrestige</h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#hero">Accueil</a></li>
-                <li><a href="#about">À propos</a></li>
-                <li><a href="#app-info">L'Application</a></li>
-                <li><a href="#questionnaire">Questionnaire</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <section id="hero" class="hero">
-        <div class="hero-text">
-            <div class="hero-box">
-                <h2>Découvrez l'essayage virtuel pour vos vêtements de luxe</h2>
-                <p>Une nouvelle expérience shopping alliant technologie et mode de prestige. Essayez vos pièces préférées en 3D, en fonction de vos mensurations exactes.</p>
-                <a href="#questionnaire" class="btn-primary">Répondre au questionnaire</a>
-            </div>
-        </div>
-    </section>
+    <div id="Top">
+        <h1>Page de profil Emma</h1>
+    </div>
 
-    <section id="about" class="about">
-        <h3>Pourquoi répondre à ce questionnaire ?</h3>
-        <p>Votre opinion compte. Aidez-nous à révolutionner l’essayage virtuel et à créer une application parfaite pour les clients des marques de luxe. Donnez votre avis et participez à l'évolution du shopping digital.</p>
-    </section>
+    <h2>Bonjour, je suis Emma</h2>
+    <img src="Images/Emma.jpg" alt="Picture of Emma">
 
-    <section id="app-info" class="app-info">
-        <h3>À propos de VisionPrestige</h3>
-        <p>VisionPrestige est une application exclusive qui permet aux utilisateurs d'essayer virtuellement des vêtements de luxe en 3D, à partir de leurs mensurations exactes. Cette technologie d'avant-garde rend l'expérience shopping plus immersive, pratique et personnalisée.</p>
-    </section>
+    <div>
+        <p>Je m'appelle Emma Giaimo, j'ai 20 ans et je suis actuellement étudiante à Kedge Business School.</p>
+        <p>Je vis à Marseille et je suis en dernière année de Bachelor. Mes études se concentrent sur le marketing, l'entrepreneuriat et la RSE.</p>
+    </div>
 
-    <section class="cta">
-        <h3>Participez à la révolution du shopping</h3>
-        <p>Votre retour est essentiel pour nous. Répondez à notre questionnaire et aidez-nous à améliorer l’expérience de l’essayage virtuel pour les marques de luxe.</p>
-        <a id="questionnaire" href="https://forms.gle/CXGVSueixq4dBmaP8" target="_blank" class="btn-secondary">Participer maintenant</a>
-    </section>
+    <div>
+        <h2>Mes réseaux sociaux</h2>
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/share/a8W5saVVZcPiTiKH/?mibextid=LQQJ4d" target="_blank" aria-label="Facebook">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/emma-giaimo-56a851223?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" aria-label="LinkedIn">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/emmagiaimo/profilecard/?igsh=Z2w1ZGxhOTZtN3dx" target="_blank" aria-label="Instagram">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
 
-    <footer>
-        <p>&copy; 2024 VisionPrestige. Tous droits réservés.</p>
-    </footer>
+    <div>
+        <h2><strong>Mes diplômes : </strong></h2>
+        <p><strong>2021</strong> - Baccalauréat</p>
+        <p><strong>2022</strong> - Bachelor Kedge Business School</p>
+    </div>
+
+    <div id="card-Hobbies">
+        <h2>Mes passions</h2>
+        <ul>
+            <li>
+                <p>J'aime pratiquer le sport, la musique et voyager.</p>
+            </li>
+            <li>
+                <p>Je suis une personne créative, qui adore la mode et le Luxe.</p>
+            </li>
+        </ul>
+    </div>
+
+    <p>Contactez-moi : <a href="mailto:emma.giaimo@kedgebs.com">emma.giaimo@kedgebs.com</a></p>
+
 </body>
+
 </html>
